Church location card converted to react styled component| responsive design horizontal overflow fix

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,7 +1,7 @@
 .button{
     border:none;
     padding: 15px 15px;
-    margin: 20px 10px 0 10px;
+    margin: 20px 0 0 10px;
     color: white;
     text-align: center;
     cursor:pointer;
@@ -14,6 +14,8 @@
     display: inline-block;
     min-width: 170px;
     text-decoration: none;
+    max-height: 55px;
+
 }
 
 .disabled{
