--- a/src/pages/Visit.module.css
+++ b/src/pages/Visit.module.css
@@ -24,66 +24,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     max-width: 1416px;
+    column-gap: 16px;
+    padding: 0 10px;
     margin: auto;
-}
-
-.churchCard {
-    margin: 20px auto 20px auto;
-    width: 415px;
-}
-
-.churchCardBody {
-    background-color: #fff;
-    padding: 5px;
-    position: relative;
-}
-
-.churchCardBody .title {
-    font-size: 23px;
-    margin-top: 5px;
-    letter-spacing: 1.5pt;
-}
-
-.churchCardBody .title::after {
-    content: '';
-    width: 50%;
-    height: 4px;
-    background-color: #3C82D4;
-    position: absolute;
-    left: 8px;
-    top: 48px;
-}
-
-.cardImg {
-    background-size: cover;
-    background-position: center;
-
-    height: 250px;
-}
-
-.info {
-    padding: 0 8px;
-}
-
-.info> :first-child {
-    margin-bottom: 30px;
-}
-
-.info strong {
-    display: inline-block;
-    min-width: 100px;
-}
-
-.cardGroup {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 8px;
-    min-height: 195px;
-}
-
-.cardGroup> :nth-child(2) {
-    padding-left: 45px;
-    padding-bottom: 65px;
 }
 
 .wte {
@@ -266,8 +209,8 @@
     .locationGrid {
         display: grid;
         grid-template-columns: 1fr;
-        margin: auto;
-
+        margin: 0 auto;
+        padding: 0 4px;
         overflow: hidden;
     }
 
@@ -305,8 +248,8 @@
     }
 
     .wte>div>div img {
-        height: 200px;
-        width: 350px;
+        height: auto;
+        width: 100%;
     }
 
     .forEveryone{
@@ -328,7 +271,7 @@
     .locationGrid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin: auto;
+        justify-content:space-evenly ;
     }
 
     .smallSection div h1 {
