--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ body {
     justify-content: space-between;
     padding: 0 5rem;
     gap: 2rem;
-    z-index: 50;
+    z-index: 999;
 }
 
 .site-title{
@@ -318,7 +318,7 @@ ul{
       display: flex; /* Show the navigation links when the nav is active */
       flex-direction: column;
       align-items: center;
-      z-index:1;
+      z-index:50;
     }
     
     .nav-toggle {
